<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context="jstudio.fallDetector.FallActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/alert"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/countdownIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fall_activity" />


        <TextView
            android:id="@+id/fallCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/countdown"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/txtHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countdownIcon"
            android:layout_centerHorizontal="true"
            android:textSize="29sp" />

        <ImageView
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/fall_report2" />

        <ImageView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/report"
            android:src="@mipmap/fall_call"/>

        <ImageView
            android:id="@+id/fine"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_alignEnd="@+id/report"
            android:src="@mipmap/fall_ok"/>



    </RelativeLayout>

</RelativeLayout>
